# data-mesh

./: .gitignore  README.md  backend.tfvars  common.tfvars
.github/workflows/: dpep-release.yml  iup-release.yml  iup-terraform-modules-oci-release.yml  mep-release.yml  terraform-modules-oci-release.yml
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/: README.MD  docker-compose.yml  pyproject.toml  setup.cfg  workspace.yaml
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/data/requests/: january-staten-island.json
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/docker/: Dockerfile
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/taxi_trips/: __init__.py
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/taxi_trips/assets/: metrics.py  trips.py
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/taxi_trips/jobs/: __init__.py
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/taxi_trips/resources/: __init__.py
domains/source-aligned-domains/02-trips/data-products/taxi_trips/dagster/taxi_trips/sensors/: __init__.py
platform/data-product-experience-plane/02_orchestration_platform/terraform/: backend.tf  config.tfvars  data.tf  main.tf  outputs.tf  variables.tf
platform/data-product-experience-plane/04_orchestration_register/terraform/: backend.tf  data.tf  main.tf  variables.tf
platform/infrastructure-utility-plane/00_foundation/terraform/: backend.tf  config.tfvars  data.tf  eks_addons.tf  (+7 more)
(+67 files in other folders)
