[tool.poetry]
name = "taxi_trips"
version = "0.0.1"
description = "A boilerplate for creating data pipelines using Dagster, Docker, and Poetry"
authors = ["Alexandre Guitton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
dagster = "=1.6.3"
dagster-aws = "=0.22.3"
dagster-k8s = "=0.22.3"
dagster-postgres = "=0.22.3"
dagster-duckdb = "=0.22.3"
botocore = "1.32.6"
kaleido = "0.2.1"
plotly = "5.18.0"
shapely = "2.0.2"
pandas = "2.2.0"
fastparquet = "2023.10.1"
pyarrow = "15.0.0"


[tool.poetry.dev-dependencies]
dagster-webserver = "=1.6.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "taxi_trips"
